--- a/user/templates/riwayat_transaksi.html
+++ b/user/templates/riwayat_transaksi.html
@@ -16,13 +16,15 @@
                 </tr>
             </thead>
             <tbody>
+                {% for result in results%}
                 <tr>
-                    <td>1 Bulan</td>
-                    <td>8 April 2024, 23:00</td>
-                    <td>8 Mei 2024, 23:00</td>
-                    <td>E-Wallet</td>
-                    <td>Rp54.900</td>
+                    <td>{{ result.1 }}</td>
+                    <td>{{ result.3 }}</td>
+                    <td>{{ result.4 }}</td>
+                    <td>{{ result.5 }}</td>
+                    <td>Rp {{ result.6 }} </td>
                 </tr>
+                {% endfor %}
             </tbody>
         </table>
         <div class="text-center mt-4">
